# sandrun

./: .gitignore  404.html  CLAUDE.md  CMakeLists.txt  COVERAGE_REPORT.md  DIAGRAM_SUGGESTIONS.md  LICENSE  MANIFEST.md  README.md  TEST_FIXES_ACTION_PLAN.md  TEST_STRATEGY_REVIEW.md  TRUSTED_POOL_SUMMARY.md  VERIFICATION_TESTS_QUICKSTART.md  VERIFICATION_TEST_REPORT.md  WORKER_IDENTITY_TEST_REPORT.md  api-design.md  error-handling.md  fix_tests.sh  implementation-plan.md  index.html  integration-layer.md  job-flows.md  job_queue.py  main.py  mkdocs.yml  plugin-system.md  pool-management.md  rate_limiter.py  requirements.txt  routes.py  sitemap.xml  src2md-jobd.md
.github/workflows/: deploy-docs.yml
CONTRIBUTING_TO_DOCS/: index.html
DEPLOYMENT/: index.html
api-reference/: index.html
architecture/: index.html
development/building/: index.html
development/testing/: index.html
docs/: CONTRIBUTING_TO_DOCS.md  DEPLOYMENT.md  api-reference.md  architecture.md  faq.md  getting-started.md  index.md  job-manifest.md  security.md  troubleshooting.md
docs/development/: building.md  testing.md
docs/integrations/: trusted-pool.md
docs/tutorials/: README.md  distributed-data-pipeline.md  quick-reference.md
environment_manager_coverage_html/: cmd_line
faq/: index.html
frontend/: index.html
getting-started/: index.html
include/: proof.h  rate_limiter.h  sandbox.h
integrations/: README.md
integrations/broker/: README.md  client_example.py  index.html
integrations/broker/node_client/: config.json  node.py
integrations/broker/server/: broker.py  requirements.txt
integrations/examples/: curl_examples.sh
integrations/mcp-server/: README.md  index.html  pyproject.toml  sandrun_mcp.py
integrations/python-client/: sandrun_client.py
integrations/trusted-pool/: .gitignore  TESTING.md  coordinator.py  index.html  requirements-test.txt  test_pool.sh  worker_key.pem  workers.example.json
integrations/web-frontend/: app.js  index.html  style.css
job-manifest/: index.html
sandrun-pool/: README.md  go.mod
sandrun-pool/contracts/: SandrunMarketplace.sol
sandrun-pool/pkg/types/: job.go
scripts/: run_tests.sh
search/: search_index.json
security/: index.html
src/: constants.h  environment_manager.cpp  environment_manager.h  file_utils.cpp  file_utils.h  http_server.cpp  http_server.h  job_hash.cpp  job_hash.h  main.cpp  multipart.cpp  multipart.h  proof.cpp  proof.h  rate_limiter.cpp  rate_limiter.h  sandbox.cpp  sandbox.h  websocket.cpp  websocket.h  worker_identity.cpp  worker_identity.h
tests/: CMakeLists.txt
tests/integration/: test_api_endpoints.cpp  test_environment_integration.cpp  test_gpu_support.cpp  test_http_integration.cpp  test_job_execution.cpp  test_job_verification.cpp  test_worker_signing.cpp
tests/unit/: test_environment_manager.cpp  test_file_utils.cpp  test_http_server.cpp  test_http_server.cpp.disabled  test_job_executor.cpp  test_job_hash.cpp  test_multipart.cpp  test_proof.cpp  test_rate_limiter.cpp  test_sandbox.cpp  test_websocket.cpp  test_worker_identity.cpp
tools/sandrunadmin/: README.md  console.py  sandrunadmin
troubleshooting/: index.html
tutorials/: index.html
tutorials/distributed-data-pipeline/: index.html
tutorials/quick-reference/: index.html
