[project]
name = "sandrun-mcp"
version = "0.1.0"
description = "MCP server for secure code execution via Sandrun"
authors = [{name = "Sandrun Project"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
sandrun-mcp = "sandrun_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
